tweakStartScript to replace jvm 25 opts placeholder
Signed-off-by: Usman Saleem <usman@usmans.info>